# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  setup.cfg  test
brain_games/: cli.py  engine.py  even_code.py
brain_games/game/: calc_code.py  even_code.py  gcd_code.py  prime_code.py  progression_code  progression_code.py
brain_games/games/: calc_code.py  even_code.py  gcd_code.py  prime_code.py  progression_code.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
