[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "n"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
